# shoprite-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/monitoring/: alertmanager-configmap.yaml  alertmanager-deployment.yaml  alertmanager-secret.yaml  grafana-dashboard.yaml  grafana-datasources.yaml  grafana-deployment.yaml  grafana-secret.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  servicemonitor.yaml
nginx/: nginx.conf
nginx/conf.d/: mcp.conf
scripts/: deploy.sh
src/: __init__.py  server.py
