[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shoprite-mcp-server"
version = "1.0.0"
description = "MCP server that exposes Shoprite product data, weekly deals, and store locations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp==1.3.0",
    "httpx==0.27.2",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    "pydantic==2.7.4",
]

[project.scripts]
shoprite-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
